src/objects/Invoice_Item__c.object
<CustomObject>
    <description>Holds the required invoice item related to the Zuora Invoice Object</description>
    <fields>
        <fullName>Charge_Amount__c</fullName>
        <description>The amount being charged for the invoice item. This amount doesn&apos;t include taxes unless the charge&apos;s tax mode is inclusive.</description>
        <label>Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Date__c</fullName>
        <description>The date the charge is made.</description>
        <label>Charge Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charge_Name__c</fullName>
        <description>The name of the invoice item&apos;s charge.</description>
        <label>Charge Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <formula>Invoice__r.Name</formula>
        <label>Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>New Invoice Items</relationshipLabel>
        <relationshipName>New_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Start_Date__c</fullName>
        <label>Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Number__c</fullName>
        <label>Subscription Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Product_Charge_Zuora_ID__c</fullName>
        <label>Subscription Product &amp; Charge Zuora ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Product_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Product &amp; Charge</label>
        <referenceTo>Zuora__SubscriptionProductCharge__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Zuora_ID__c</fullName>
        <label>Subscription Zuora ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <description>The amount of tax applied to the invoice item&apos;s charge.</description>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>The per-unit price of the invoice item.</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora_ID__c</fullName>
        <externalId>true</externalId>
        <label>Zuora ID</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>II-{000000000}</displayFormat>
        <label>Invoice Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>